fix(Modal): fix modal overflow behaviour

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+}
+
+#root {
+  overflow: auto;
 }
 
 html, body, #root, .App {
